# django-ninja-search

./: .coveragerc  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  MIGRATION.md  README.md  pyproject.toml  pytest.ini
.agents/: memory.md  project-config.md
.claude/: settings.json
.claude/agents/: backend.md  orchestrator.md  researcher.md  reviewer.md  tester.md
.github/workflows/: publish.yml  test  test.yml
ninja_search/: __init__.py  searching.py
tests/: conftest.py  manage.py
tests/test_project/: settings.py
tests/unit/: apps.py  models.py  test_integration.py  test_searching.py
