[project]
name = "django-ninja-search"
version = "0.3.0"
description = "A decorator to simplify searching and filtering in Django Ninja views."
authors = [
  { name = "Anand R Nair", email = "anand547@outlook.com" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
  "django (>=5.1.0,<7.0.0)",
  "django-ninja (>=1.4.3,<2.0.0)",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Framework :: Django",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/anandrnair547/django-ninja-search"
Repository = "https://github.com/anandrnair547/django-ninja-search"
Issues = "https://github.com/anandrnair547/django-ninja-search/issues"

[tool.poetry]
packages = [{ include = "ninja_search" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-django = "^4.11.1"
pytest-cov = "^6.2.1"
ruff = ">=0.9,<1.0"

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = ["agent-setup"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]

[tool.ruff.lint.per-file-ignores]
# B008: `filters: Schema = Query(...)` call-in-default is the django-ninja idiom
# DJ008: __str__ is pointless on throwaway test models
"tests/**" = ["B008", "DJ008"]
